force-app/main/default/objects/Beer__c/Beer__c.object-meta.xml
<CustomObject>
    <description>Represents a beer that is distributed by a brewery.</description>
    <label>Beer</label>
    <nameField>
        <label>Beer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Beers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>