force-app/main/default/objects/Beer__c/fields/ABV__c.field-meta.xml
<CustomField>
    <fullName>ABV__c</fullName>
    <description>Content of alcohol by volume of the beer.</description>
    <label>ABV</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>