force-app/main/default/objects/Beer__c/fields/Brewery__c.field-meta.xml
<CustomField>
    <fullName>Brewery__c</fullName>
    <description>Brewery that distributes this beer.</description>
    <label>Brewery</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Beers</relationshipLabel>
    <relationshipName>Beers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>