force-app/main/default/objects/Beer__c/fields/Number_of_Check_Ins__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Check_Ins__c</fullName>
    <label>Number of Check-Ins</label>
    <summaryForeignKey>Check_In__c.Beer__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>