force-app/main/default/objects/Beer__c/fields/Style__c.field-meta.xml
<CustomField>
    <fullName>Style__c</fullName>
    <description>Type of beer. Using a text field instead of picklist due to the growing list of beer styles.</description>
    <label>Style</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>