force-app/main/default/objects/Beer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Brewery__c</columns>
    <columns>Style__c</columns>
    <columns>ABV__c</columns>
    <columns>Number_of_Check_Ins__c</columns>
    <columns>Untappd_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>